--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "7285553335"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,23 +279,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7285553336"
+       "7285553337"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "phone_num_two = \"7285553334\" # 7285553336\n",
-    "phone_num_two = int(phone_num_two) + 2\n",
+    "phone_num_two = int(phone_num_one) + 2\n",
     "phone_num_two"
    ]
   },
